Set up CI with Azure Pipelines
[skip ci]

--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -1,4 +1,4 @@
-﻿variables:
+variables:
   SolutionName: '$(System.DefaultWorkingDirectory)\dfc-providerportal-database.sln'
   BuildPlatform: 'any cpu'
   BuildConfiguration: 'release'
